; ModuleID = '/home/carl/AnghaBench/TDengine/src/util/src/extr_ttime.c_getTimestampInUsFromStr.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/util/src/extr_ttime.c_getTimestampInUsFromStr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @getTimestampInUsFromStr(i8* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i64 0, i64* @errno, align 8
  store i8* null, i8** %8, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @strtoll(i8* %10, i8** %8, i32 10)
  store i32 %11, i32* %9, align 4
  %12 = load i64, i64* @errno, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %25

15:                                               ; preds = %3
  %16 = load i32, i32* %9, align 4
  %17 = load i8*, i8** %5, align 8
  %18 = load i32, i32* %6, align 4
  %19 = sub nsw i32 %18, 1
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i8, i8* %17, i64 %20
  %22 = load i8, i8* %21, align 1
  %23 = load i32*, i32** %7, align 8
  %24 = call i32 @getTimestampInUsFromStrImpl(i32 %16, i8 signext %22, i32* %23)
  store i32 %24, i32* %4, align 4
  br label %25

25:                                               ; preds = %15, %14
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i32 @strtoll(i8*, i8**, i32) #1

declare dso_local i32 @getTimestampInUsFromStrImpl(i32, i8 signext, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
